# analysis_project

./: LICENSE  pyproject.toml
analysis_project/: extractor.py  main.py
tests/: test_extractor.py
